文章格式改进

--- a/对不起，你的好心我无心领受.md
+++ b/对不起，你的好心我无心领受.md
@@ -1,27 +1,27 @@
-​    昨晚，一人发短信给我，内容是：“我拾到您的饭卡。”我瞬间觉悟，但我已经补办了新卡，所以我回复说：“不用了，我已经办了新卡，谢谢。”我本想在“不用了”后面加一句“留给你做纪念吧”，想想觉得有点做作，便没有加。
+昨晚，一人发短信给我，内容是：“我拾到您的饭卡。”我瞬间觉悟，但我已经补办了新卡，所以我回复说：“不用了，我已经办了新卡，谢谢。”我本想在“不用了”后面加一句“留给你做纪念吧”，想想觉得有点做作，便没有加。
 
-​    我在上周周二下午丢了饭卡，这位朋友在昨天也就是周日才联系到了我，我没去问他怎么知道我的号码的，我猜应该是我在人人上发的一条状态，他看到了，所以联系到了我。但是，为什么昨天晚上才联系到了我？是他在周日才捡到卡的吗？我想不可能，因为我把我走过的那段路来回巡视了很多遍，没有找到我丢的卡，所以应该是他在我巡视之前就捡到了卡。那是他周日才看到我发的人人状态吗？我想也不可能，虽然我人人用的不多，但我还是知道“刷人人”的普遍性，从周二到周日，这么多天，我发的那条人人状态我想早就石沉大海，他怎么可能在周日看到。
+我在上周周二下午丢了饭卡，这位朋友在昨天也就是周日才联系到了我，我没去问他怎么知道我的号码的，我猜应该是我在人人上发的一条状态，他看到了，所以联系到了我。但是，为什么昨天晚上才联系到了我？是他在周日才捡到卡的吗？我想不可能，因为我把我走过的那段路来回巡视了很多遍，没有找到我丢的卡，所以应该是他在我巡视之前就捡到了卡。那是他周日才看到我发的人人状态吗？我想也不可能，虽然我人人用的不多，但我还是知道“刷人人”的普遍性，从周二到周日，这么多天，我发的那条人人状态我想早就石沉大海，他怎么可能在周日看到。
 
-​    那，为什么他周日才联系我呢？
+那，为什么他周日才联系我呢？
 
-​    关于丢东西这件事，我有过很多很多惨痛的教训但未有悔改，我比较粗心，曾在高中的一段时间里，连续丢了一个OPPO的MP4，一件只穿了两三天的外套，一只水杯，一副眼镜，甚至连英语课堂笔记也被我弄丢过，那段时间我有点崩溃，平常丢丢袜子丢丢内裤也就算了，怎么重要的东西也弄丢了，MP4是我姐给我的生日礼物，外套是我妈冒着上班迟到的危险陪我去买的，水杯是我妈很喜欢的杯子，我跟她磨了很久她才答应给我，我还打包票说肯定不会弄丢，眼镜也是我姐给我配的。到了大学里，我也先后掉了两次钥匙圈和两次饭卡，好在钥匙圈后来都被我找到了，第一次掉饭卡我后来也找到了，我是一个容易感到庆幸和感恩的人，当我成功避免了补卡所要支付的25块钱，我觉得我很开心，还请基友吃了一顿饭。基友莫名其妙，夸我大方，我说让你听了我丢卡后的那么多的抱怨，现在当做补偿吧。
+关于丢东西这件事，我有过很多很多惨痛的教训但未有悔改，我比较粗心，曾在高中的一段时间里，连续丢了一个OPPO的MP4，一件只穿了两三天的外套，一只水杯，一副眼镜，甚至连英语课堂笔记也被我弄丢过，那段时间我有点崩溃，平常丢丢袜子丢丢内裤也就算了，怎么重要的东西也弄丢了，MP4是我姐给我的生日礼物，外套是我妈冒着上班迟到的危险陪我去买的，水杯是我妈很喜欢的杯子，我跟她磨了很久她才答应给我，我还打包票说肯定不会弄丢，眼镜也是我姐给我配的。到了大学里，我也先后掉了两次钥匙圈和两次饭卡，好在钥匙圈后来都被我找到了，第一次掉饭卡我后来也找到了，我是一个容易感到庆幸和感恩的人，当我成功避免了补卡所要支付的25块钱，我觉得我很开心，还请基友吃了一顿饭。基友莫名其妙，夸我大方，我说让你听了我丢卡后的那么多的抱怨，现在当做补偿吧。
 
-​    丢了那么多东西，我当然有做过检讨，是我对东西不够爱护啦，我自己粗线条啦，我自己活该啦，但我扪心自问，我对我的东西非常爱护，不然我也不会喷出那么多的脏话来抱怨，就不会来来回回找了那么多遍。除了丢袜子内裤之外，我丢完东西后都有一个共性，就是我会以寻找失散多年的爹妈的态度去找我丢失的东西，从这点看我是一个念旧的人，我也是个愿意弥补过失的人。
+丢了那么多东西，我当然有做过检讨，是我对东西不够爱护啦，我自己粗线条啦，我自己活该啦，但我扪心自问，我对我的东西非常爱护，不然我也不会喷出那么多的脏话来抱怨，就不会来来回回找了那么多遍。除了丢袜子内裤之外，我丢完东西后都有一个共性，就是我会以寻找失散多年的爹妈的态度去找我丢失的东西，从这点看我是一个念旧的人，我也是个愿意弥补过失的人。
 
-​    好，让一切回到开始，我刚丢了东西，如果没有好心人捡到，我回头仔细找一遍，找到的几率有多大，我想应该很大吧。
+好，让一切回到开始，我刚丢了东西，如果没有好心人捡到，我回头仔细找一遍，找到的几率有多大，我想应该很大吧。
 
-​    我总喜欢把人往好处想，我会设定人都是善良的，所以我认为捡到的朋友都是好心想帮助丢失者的（虽然也有可能捡到是为了一己私欲）。
+我总喜欢把人往好处想，我会设定人都是善良的，所以我认为捡到的朋友都是好心想帮助丢失者的（虽然也有可能捡到是为了一己私欲）。
 
-​    这不是在小学，拾到了东西可以交到讲台或者交给老师，在大学里，包括在其他很多地方，如果没有一个很好的失物照领的机制，那么好心人大可不必施展你的好心，因为你可能帮倒忙，你把东西捡走后，你要怎么找到失主？失主要怎么找到？在给失主造成损失的同时，你的好心可能也就成为了泡沫。
+这不是在小学，拾到了东西可以交到讲台或者交给老师，在大学里，包括在其他很多地方，如果没有一个很好的失物照领的机制，那么好心人大可不必施展你的好心，因为你可能帮倒忙，你把东西捡走后，你要怎么找到失主？失主要怎么找到？在给失主造成损失的同时，你的好心可能也就成为了泡沫。
 
-​    说这些好像打击了好人行善的积极性，但现实就是如此，在一个好的制度出来之前，你要考虑考虑自己做好事的可行性，到底能不能帮到忙，能多大程度的帮到？就好比救助落水的人，如果你没有能力去救，那么你逞能下水也只是赔上一条命而已。很多父母在表现自己的父爱母爱的时候也喜欢说“我都是为了你好”，但好不好是他们说了算的吗。还有一些人喜欢谈出发点，说什么出发点是好的，对于这些人，我只能说，是典型的没有学好政治，政治书上“出发点”和“落脚点”是必须在一起说的，只是出发点好而落脚点惨淡，这就跟你干了一个不想怀孕的女人原本是想让她爽没想到让她肚子大了一样。
+说这些好像打击了好人行善的积极性，但现实就是如此，在一个好的制度出来之前，你要考虑考虑自己做好事的可行性，到底能不能帮到忙，能多大程度的帮到？就好比救助落水的人，如果你没有能力去救，那么你逞能下水也只是赔上一条命而已。很多父母在表现自己的父爱母爱的时候也喜欢说“我都是为了你好”，但好不好是他们说了算的吗。还有一些人喜欢谈出发点，说什么出发点是好的，对于这些人，我只能说，是典型的没有学好政治，政治书上“出发点”和“落脚点”是必须在一起说的，只是出发点好而落脚点惨淡，这就跟你干了一个不想怀孕的女人原本是想让她爽没想到让她肚子大了一样。
 
-​    我之前读到一则新闻，大意是四个成都大学的学生组成志愿团去雅安受灾地做志愿者，没有任何团体组织他们，表面看起来行为很正义，值得提倡，但具体情况是这些人没有带任何的救灾物资去，怀着一腔热血去了，去了之后其实没帮到什么忙，只是发了一些矿泉水，因为他们毫无组织，反而加重的道路负担，从成都到雅安的这条生命之路，在72小时大限到来之前，救援部队要尽可能早的到达雅安，这几位大学生开着车占了道路资源，直接阻碍了救援部队行进的速度。他们是帮了小忙，碍了大事。
+我之前读到一则新闻，大意是四个成都大学的学生组成志愿团去雅安受灾地做志愿者，没有任何团体组织他们，表面看起来行为很正义，值得提倡，但具体情况是这些人没有带任何的救灾物资去，怀着一腔热血去了，去了之后其实没帮到什么忙，只是发了一些矿泉水，因为他们毫无组织，反而加重的道路负担，从成都到雅安的这条生命之路，在72小时大限到来之前，救援部队要尽可能早的到达雅安，这几位大学生开着车占了道路资源，直接阻碍了救援部队行进的速度。他们是帮了小忙，碍了大事。
 
-​    从这则新闻可以知道，在做好事之前要头脑清醒点，别被社会舆论和社会道德冲昏了头脑，对于平民，更实际的行动还是捐款，但要选择一个有公信力的慈善机构，比如李连杰的壹基金，红十字会就不要去了，不然可能会有千千万万个郭美美冒出来挑战这个社会的道德底线，到时别骂爹骂娘加“我操......”。
+从这则新闻可以知道，在做好事之前要头脑清醒点，别被社会舆论和社会道德冲昏了头脑，对于平民，更实际的行动还是捐款，但要选择一个有公信力的慈善机构，比如李连杰的壹基金，红十字会就不要去了，不然可能会有千千万万个郭美美冒出来挑战这个社会的道德底线，到时别骂爹骂娘加“我操......”。
 
-​    网络都会存在着一些不实报道，别自以为看到了一些虚构夸大的消息，就妄想要去拯救世界了。
+网络都会存在着一些不实报道，别自以为看到了一些虚构夸大的消息，就妄想要去拯救世界了。
 
-​    拯救世界是奥特曼和超人的责任，干你屌丝青年毛事。
+拯救世界是奥特曼和超人的责任，干你屌丝青年毛事。
 
 ​    
